@@ -2,6 +2,8 @@
   Changes with Apache Traffic Server 3.3.3
 
 
+  *) [TS-1899] strtod() does not honor Hex strings on Solaris.
+
   *) [TS-1894] madvise() not found on Solaris. And some cleanup.
 
   *) [TS-1765] Make jtest build more like the rest of the code.
